--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,19 @@
 <h1>{{title}}</h1>
 <p>Welcome to express {{title}}</p>
+
+<p>
+	product: <mark>{{productName}}</mark>
+	and <mark> {{productTitle}} </mark>
+</p>
+
+<p>
+	{{#each productList}}
+		<li>
+			{{name}} {{navn}}
+		</li>
+	{{/each}}
+
+
+
+</p>
+
